Add simple clojure examples minimally demonstrating features (#54)
- create simple-examples directory with README and deps.edn
- update project.clj to include simple-examples in dev source paths
- implement basic_agent: single node synchronous execution with -main
- implement multi_node_agent: multi-node graph with emissions and -main
- implement async_agent: asynchronous initiation and result handling with -main
- implement agent_objects_agent: static and dynamic shared objects with -main
- examples are runnable via lein with-profile +dev run -m namespace